PROJECT(dosbox)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

INCLUDE(CheckIncludeFiles)
INCLUDE(CheckTypeSize)
INCLUDE(CheckFunctionExists)
INCLUDE(CheckLibraryExists)

SET(CMAKE_CXX_FLAGS "/nologo /W3 /wd4996 /EHsc")

SET(C_DEBUG 0)
SET(C_HEAVY_DEBUG 0)

IF(WIN32)
    ADD_DEFINITIONS(-DWIN32=1)
    INCLUDE_DIRECTORIES(src/platform/visualc)
    SET(EXTERNAL_LIBRARIES "Winmm.lib")
    SET(C_IPX 0)
    SET(C_SSHOT 0)
    SET(C_CORE_INLINE 1)
    SET(ENVIRON_LINKED 1)
    SET(ENVIRON_INCLUDED 1)
    SET(C_UNALIGNED_MEMORY 1)
    SET(C_FPU_X86 1)
    SET(C_DYNREC 0)
    SET(C_DIRECTSERIAL 1)
    SET(C_DYNAMIC_X86 1)
    SET(C_MODEM 0)
    SET(C_OPENGL 0)
    SET(C_TARGETCPU "X86")
    SET(C_FPU 0)
ENDIF()

FIND_PACKAGE(SDL REQUIRED)
IF(SDL_FOUND)
    INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
ENDIF()

CHECK_TYPE_SIZE("unsigned char" SIZEOF_UNSIGNED_CHAR)
CHECK_TYPE_SIZE("unsigned short" SIZEOF_UNSIGNED_SHORT)
CHECK_TYPE_SIZE("unsigned int" SIZEOF_UNSIGNED_INT)
CHECK_TYPE_SIZE("unsigned long" SIZEOF_UNSIGNED_LONG)
CHECK_TYPE_SIZE("unsigned long long" SIZEOF_UNSIGNED_LONG_LONG)
CHECK_TYPE_SIZE("int * "  SIZEOF_INT_P)

CHECK_INCLUDE_FILE(memory.h HAVE_MEMORY_H)
CHECK_INCLUDE_FILE(stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H)

SET(CMAKE_BUILD_TYPE "Release")
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DHAVE_CONFIG_H)
INCLUDE_DIRECTORIES(include ${CMAKE_CURRENT_BINARY_DIR})
ADD_SUBDIRECTORY(src)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/config.h PROPERTIES GENERATED TRUE)
