CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(DOSBox)

SET(PROJECT_VERSION_MAJOR 0)
SET(PROJECT_VERSION_MINOR 74)

INCLUDE(CheckIncludeFiles)
INCLUDE(CheckTypeSize)
INCLUDE(CheckFunctionExists)
INCLUDE(CheckLibraryExists)
INCLUDE(CheckStructHasMember)

#ENABLE_LANGUAGE(RC)

ADD_DEFINITIONS(-DHAVE_CONFIG_H)
FIND_PACKAGE(OpenGL)
SET(C_OPENGL ${OPENGL_FOUND})

SET(C_DEBUG 0)
SET(C_HEAVY_DEBUG 0)
SET(C_IPX 0)
SET(ENVIRON_LINKED 1)
SET(ENVIRON_INCLUDED 1)
SET(C_UNALIGNED_MEMORY 1)
SET(C_MODEM 0)
SET(C_TARGETCPU “${CMAKE_SYSTEM_PROCESSOR}”)

IF("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
    SET(LINUX 1)
ENDIF()

IF(WIN32)
    SET(CMAKE_CXX_FLAGS "/nologo /W3 /wd4996 /EHsc")
    ADD_DEFINITIONS(-DWIN32=1)
    INCLUDE_DIRECTORIES(src/platform/visualc)
    SET(EXTERNAL_LIBRARIES "Winmm.lib")
    SET(C_DIRECTSERIAL 1)
#    SET(C_TARGETCPU "X86")
    SET(C_DYNAMIC_X86 1)
    SET(C_DYNREC 0)
    SET(C_FPU 0)
    SET(C_FPU_X86 1)
    SET(C_SSHOT 0)
    SET(C_INLINE 0)
    SET(C_CORE_INLINE 1)
ELSE()
    FIND_PACKAGE(ALSA)
    SET(HAVE_ALSA ${ALSA_FOUND})
    ADD_DEFINITIONS(-D_REENTRANT)
#    SET(C_TARGETCPU "X86_64")
    SET(C_DIRECTSERIAL 1)
    SET(C_DYNAMIC_X86 0)
    SET(C_DYNREC 1)
    SET(C_FPU 1)
    SET(C_FPU_X86 0)
    SET(C_SSHOT 0)
    SET(C_INLINE 1)
    SET(C_CORE_INLINE 0)
    SET(C_HAS_ATTRIBUTE __LINUX_COMPILER_GNU)
    SET(C_HAS_BUILTIN_EXPECT __LINUX_COMPILER_GNU)
ENDIF()

FIND_PACKAGE(SDL REQUIRED)
IF(SDL_FOUND)
    ADD_DEFINITIONS(-D_GNU_SOURCE=1)
    INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
ENDIF()

CHECK_TYPE_SIZE("unsigned char" SIZEOF_UNSIGNED_CHAR)
CHECK_TYPE_SIZE("unsigned short" SIZEOF_UNSIGNED_SHORT)
CHECK_TYPE_SIZE("unsigned int" SIZEOF_UNSIGNED_INT)
CHECK_TYPE_SIZE("unsigned long" SIZEOF_UNSIGNED_LONG)
CHECK_TYPE_SIZE("unsigned long long" SIZEOF_UNSIGNED_LONG_LONG)
CHECK_TYPE_SIZE("int * "  SIZEOF_INT_P)

CHECK_STRUCT_HAS_MEMBER("struct dirent" d_type dirent.h DIRENT_HAS_D_TYPE)

CHECK_INCLUDE_FILE(memory.h HAVE_MEMORY_H)
CHECK_INCLUDE_FILE(stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H)
CHECK_INCLUDE_FILE(inttypes.h HAVE_INTTYPES_H)
CHECK_INCLUDE_FILE(memory.h HAVE_MEMORY_H)
CHECK_INCLUDE_FILE(netinet/in.h HAVE_NETINET_IN_H)
CHECK_INCLUDE_FILE(pwd.h HAVE_PWD_H)
CHECK_INCLUDE_FILE(strings.h HAVE_STRINGS_H)
CHECK_INCLUDE_FILE(string.h HAVE_STRING_H)
CHECK_INCLUDE_FILE(sys/socket.h HAVE_SYS_SOCKET_H)
CHECK_INCLUDE_FILE(sys/stat.h HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILE(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)

CHECK_LIBRARY_EXISTS("asound" "snd_asoundlib_version" "" HAVE_LIBASOUND)

CHECK_FUNCTION_EXISTS(mprotect C_HAVE_MPROTECT)

SET(CMAKE_BUILD_TYPE "Release")
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DHAVE_CONFIG_H)
INCLUDE_DIRECTORIES(include ${CMAKE_CURRENT_BINARY_DIR})
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/config.h PROPERTIES GENERATED TRUE)
