ADD_SUBDIRECTORY(debug)
ADD_SUBDIRECTORY(cpu)
ADD_SUBDIRECTORY(dos)
ADD_SUBDIRECTORY(fpu)
ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(hardware)
ADD_SUBDIRECTORY(ints)
ADD_SUBDIRECTORY(misc)
ADD_SUBDIRECTORY(shell)

IF(WIN32)
    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/winres.rc.cmake ${CMAKE_CURRENT_BINARY_DIR}/winres.rc)
    SET(ADDITIONAL_SOURCES "${CMAKE_CURRENT_BINARY_DIR}/winres.rc")
ENDIF()

ADD_EXECUTABLE(dosbox
    WIN32
    dosbox.cpp
    ${ADDITIONAL_SOURCES}
)


TARGET_LINK_LIBRARIES(dosbox
    shell
    cpu
    fpu
    gui
    hardware
    ints
    misc
    dosboxdebug
    ${SDL_LIBRARY}
    ${ALSA_LIBRARY}
    ${OPENGL_LIBRARIES}
    ${EXTERNAL_LIBRARIES})
