ADD_LIBRARY(gui
    dosbox_logo.h
    dosbox_splash.h
    midi.cpp
    midi_alsa.h
    midi_coreaudio.h
    midi_coremidi.h
    midi_oss.h
    midi_win32.h
    render_loops.h
    render.cpp
    render_scalers.cpp render_scalers.h
    render_simple.h
    render_templates_hq.h
    render_templates_hq2x.h
    render_templates_hq3x.h
    render_templates_sai.h
    render_templates.h
    sdlmain.cpp
    sdl_gui.cpp
    sdl_mapper.cpp    
)



