ADD_SUBDIRECTORY(serialport)
ADD_LIBRARY(hardware
adlib.cpp
cmos.cpp
dbopl.cpp
disney.cpp
dma.cpp
gameblaster.cpp
gus.cpp
hardware.cpp
iohandler.cpp
ipx.cpp
ipxserver.cpp
joystick.cpp
keyboard.cpp
memory.cpp
mixer.cpp
mpu401.cpp
opl.cpp
pcspeaker.cpp
pic.cpp
sblaster.cpp
tandy_sound.cpp
timer.cpp
vga.cpp
vga_attr.cpp
vga_crtc.cpp
vga_dac.cpp
vga_draw.cpp
vga_gfx.cpp
vga_memory.cpp
vga_misc.cpp
vga_other.cpp
vga_paradise.cpp
vga_s3.cpp
vga_seq.cpp
vga_tseng.cpp
vga_xga.cpp
)
TARGET_LINK_LIBRARIES(hardware serialport)
