ADD_LIBRARY(ints

bios.cpp
bios_disk.cpp
bios_keyboard.cpp
ems.cpp
int10.cpp
int10_char.cpp
int10_memory.cpp
int10_misc.cpp
int10_modes.cpp
int10_pal.cpp
int10_put_pixel.cpp
int10_vesa.cpp
int10_video_state.cpp
int10_vptable.cpp
mouse.cpp
xms.cpp
)

IF(C_DEBUG)
    TARGET_LINK_LIBRARIES(ints dosboxdebug)
ENDIF()
